--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ fieldset,
 body {
     background: #EFEFEF;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 
 }
 
 body::before {
     content: '';
-    width: 100vw;
+    width: 750px;
     height: 436px;
 
     position: absolute;
